css/components/contact.css
.contact {
  background-color: var(--color-primary-B400);
  background-image: url(../../assets/images/contact-form-shapes-mobile.png);
  background-repeat: no-repeat;
  background-size: 210px auto;
  background-position: right 21px;
  padding: 104px 24px 45px;
  border-top-left-radius: 75px;
}

.contact .contact__headline {
  text-align: center;
  margin-bottom: 45px;
}

.contact .contact__headline-title {
  font-weight: var(--font-bold);
  font-size: var(--text-xxxl);
  line-height: 52px;
  color: var(--color-neutrals);
  margin-bottom: 12px;
}

.contact .contact__headline-text {
  font-size: var(--text-lg);
  line-height: 28px;
  color: var(--color-primary-B50);
}

.contact .contact__form {
  display: flex;
  flex-direction: column;
}

.contact .contact__form-input {
  font-family: var(--base-font-family) !important;
  font-weight: var(--font-regular);
  font-size: var(--text-base);
  line-height: 20px;
  color: var(--color-neutrals-N800);
  background: var(--color-neutrals);
  outline: 1px solid var(--color-base-100);
  border: none;
  border-radius: 8px;
  min-height: 48px;
  padding: 15px 16px;
  margin-bottom: 20px;
}

.contact .contact__form-input::placeholder {
  font-size: var(--text-sm);
  line-height: 24px;
  color: var(--color-neutrals-N60);
}

.contact .contact__form-input:focus-visible {
  outline: 2px solid var(--color-primary-B600);
  border-color: var(--color-primary);
}

.contact textarea.contact__form-input {
  resize: none;
}

.contact .contact__form-button {
  align-self: flex-start;
  margin-top: 4px;
}

@media screen and (min-width: 768px) {
  .contact {
    background-image: url(../../assets/images/contact-form-shapes-desktop.png);
    background-repeat: no-repeat;
    text-align: center;
    background-size: 1290px auto;
    background-position: center;
    border-top-left-radius: 125px;
    padding: 142px 0 127px;
  }

  .contact .contact__wrapper {
    max-width: 801px;
    padding: 0 116px;
    margin: 0 auto;
  }

  .contact .contact__form-input {
    margin-bottom: 28px;
  }

  .contact .contact__form-button {
    align-self: center;
  }
}

